[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic_utils_unique_volomos"
version = "0.0.2"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example titanic crash"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
"pandas"
]

[project.urls]
"Homepage" = "https://github.com/nickdelgrosso/automatedTesting"
"Bug Tracker" = "https://github.com/nickdelgrosso/automatedTesting/issues"
