[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic_utils_unique_volomos"
dynamic = ["version"]

authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example titanic crash"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
"pandas"
]

[project.urls]
"Homepage" = "https://github.com/nickdelgrosso/automatedTesting"
"Bug Tracker" = "https://github.com/nickdelgrosso/automatedTesting/issues"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "titanic_utils/_version.py"
